03,more ram,lowered minimium brigthness,battery pooling

--- a/arch/arm/configs/yp_g70_eur_defconfig
+++ b/arch/arm/configs/yp_g70_eur_defconfig
@@ -324,7 +324,7 @@ CONFIG_S5PC110_DEV_ONENAND=y
 # CONFIG_MACH_ARIES is not set
 CONFIG_MACH_VENTURI=y
 # CONFIG_VENTURI_KOR is not set
-CONFIG_VENTURI_USA=y
+# CONFIG_VENTURI_USA is not set
 CONFIG_S5PV210_SETUP_FB=y
 CONFIG_S5P_ADC=y
 CONFIG_S5PV210_SETUP_FIMC0=y
